# FETCHREASEARCHPAPERSPROJECT

./: README.md  atm.py  config.py  pyproject.toml  results.csv
tests/: test_fetcher.py
views/: cli.py  fetcher.py  utils.py
